2008-05-03  Jaap A. Haitsma  <jaap@haitsma.org>

	* modulesets/gnome-2.24.modules:
	* modulesets/gnome-suites-2.24.modules:
	Update gnome-policykit repo. New repo is on GNOME SVN

2008-05-03  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* modulesets/gnome-2.24.modules: added refdbg.

2008-05-02  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml, jhbuild/commands/base.py, jhbuild/moduleset.py:
	add --build-optional-modules and --list-optional-modules (respectively
	for the build and list commands) to include modules that would
	otherwise not be built/listed in the dependency graph.

	* doc/C/jhbuild.xml: add documentation for the --force option (for
	build and buildone commands).

2008-05-01  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: gnome-nettool branched for
	GNOME 2.22.

2008-05-01  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* modulesets/gnome-external-deps-2.24.modules:
	Raise dependency of libxklavier to 3.6 as needed
	by gnome-control-center.

2008-05-01  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/arch.py, jhbuild/versioncontrol/bzr.py,
	jhbuild/versioncontrol/darcs.py, jhbuild/versioncontrol/git.py,
	jhbuild/versioncontrol/hg.py, jhbuild/versioncontrol/mtn.py,
	jhbuild/versioncontrol/tarball.py: aborts with an useful message when a
	branch is incorrectly overrided in .jhbuildrc.

2008-05-01  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py: use JHBuild executed Python to get version number
	and set PYTHONPATH appropriately.  (closes: #136983)

2008-05-01  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-suites-2.22.modules: put back gnome-2-20 branch for
	GDM. (was probably committed by accident)

2008-04-30  Jaap A. Haitsma  <jaap@haitsma.org>

	* modulesets/freedesktop-2.24.modules:
	Add telepathy-stream-engine, libfarsight and gst-plugins-farsight

2008-04-29  William Jon McCann  <jmccann@redhat.com>

	* modulesets/gnome-suites-2.22.modules:
	gnome-screensaver branched.
