@@ -1,3 +1,11 @@
+2008-05-03  Frederic Peters  <fpeters@0d.be>
+
+	* doc/C/jhbuild.xml, jhbuild/commands/base.py, jhbuild/config.py,
+	jhbuild/defaults.jhbuildrc, jhbuild/frontends/buildscript.py: added a
+	--min-age option for build and buildone commands.  (closes: #384423)
+
+	* doc/C/jhbuild.xml: fixed Docbook correctness.
+
 2008-05-03  Jaap A. Haitsma  <jaap@haitsma.org>
 
 	* modulesets/gnome-2.24.modules:
